tests/models/snapshots/users/can_create_user@users.snap
---
source: tests/models/users.rs
assertion_line: 57
expression: result
---
Ok(
    User {
        id: ID,
        pid: PID,
        organisation_pid: PID,
        role: "admin",
        email: "test@mail.net",
        password_hash: "PASSWORD",
        first_name: "Tester",
        last_name: "Framework",
        is_active: true,
        password_change_required: false,
        reset_token: None,
        reset_token_sent_at: None,
        last_login: None,
        last_password_change: None,
        created_at: DATE,
        updated_at: DATE,
    },
)
