tests/models/snapshots/users/can_find_all_role_query@users.snap
---
source: tests/models/users.rs
assertion_line: 122
expression: result
---
Ok(
    [
        User {
            id: 10,
            pid: bd6f7c26-d2c9-487e-b837-8f77be468033,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            role: "admin",
            email: "john.doe@acme.com",
            password_hash: "$argon2d$v=19$m=12,t=3,p=1$dzhsemJycHJ4bTAwMDAwMA$gwggLXNwI8OgJmMXSP3Wdg",
            first_name: "John",
            last_name: "Doe",
            is_active: true,
            password_change_required: false,
            reset_token: None,
            reset_token_sent_at: None,
            last_login: None,
            last_password_change: Some(
                2024-12-21T09:00:00+00:00,
            ),
            created_at: 2024-12-21T09:00:00+00:00,
            updated_at: 2024-12-21T09:00:00+00:00,
        },
        User {
            id: 11,
            pid: e761d8e3-fc3e-4a2e-a6c9-7c7a4f2130e8,
            organisation_pid: 4a93f0a8-4a91-482d-92d8-f0b3b084c2e4,
            role: "admin",
            email: "jane.smith@globex.com",
            password_hash: "$argon2d$v=19$m=12,t=3,p=1$cmk2anZmdmQ4eTAwMDAwMA$twYxAHf+ipQw84lCBUVK+w",
            first_name: "Jane",
            last_name: "Smith",
            is_active: false,
            password_change_required: false,
            reset_token: None,
            reset_token_sent_at: None,
            last_login: None,
            last_password_change: None,
            created_at: 2024-12-20T11:45:00+00:00,
            updated_at: 2024-12-21T09:15:00+00:00,
        },
        User {
            id: 12,
            pid: 3c008e68-88fa-4072-808e-6888fa60724c,
            organisation_pid: 4a0f3af9-e56e-4e21-8f3a-f9e56efe215b,
            role: "admin",
            email: "james.moriaty@continental.org",
            password_hash: "$argon2d$v=19$m=16,t=2,p=1$cTZhOHVtY2dJTzBqYTBudw$/704JvCsW23pidisyXK+Tw",
            first_name: "James",
            last_name: "Moriaty",
            is_active: true,
            password_change_required: false,
            reset_token: None,
            reset_token_sent_at: None,
            last_login: Some(
                2024-12-20T11:45:00+00:00,
            ),
            last_password_change: Some(
                2024-12-21T09:00:00+00:00,
            ),
            created_at: 2024-12-20T11:45:00+00:00,
            updated_at: 2024-12-20T11:45:00+00:00,
        },
    ],
)
