tests/models/snapshots/users/can_handle_invalid_role@users.snap
---
source: tests/models/users.rs
assertion_line: 177
expression: result
---
Err(
    Validation(
        "{\"role\":\"Only admin, manager and staff roles allowed\"}",
    ),
)
